syntax ="proto3";

package user;
import "google/protobuf/timestamp.proto";

option go_package="user/pb";

message User {
    string id = 1;
}

message getUserReq {
   string id = 1;
}

message getUserByEmailReq {
    string email = 1;
}

message getUserRsp {
    string id = 1;
    google.protobuf.Timestamp createdTime = 2;
    google.protobuf.Timestamp updatedTime = 3;
    string email = 4;
    string name = 5;
}

message addUserReq {
    string email = 1;
    string name = 2;
    string password = 3;
}

message addUserRsp {
    string id = 1;
    string email = 2;
    string name = 3;
}

message updateUserReq {
    string id = 1;
    string name = 2;
    string password = 3;
}

message updateUserRsp {}

message deleteUserReq {
   string id = 1;
}

message deleteUserRsp {}

message loginReq {
    string email = 1;
    string password = 2;
}

message loginRsp {
    string id = 1;
    string email = 2;
    string name = 3;
}

service user {
   rpc getUser(getUserReq) returns(getUserRsp);
   rpc getUserByEmail(getUserByEmailReq) returns(getUserRsp);
   rpc addUser(addUserReq) returns(addUserRsp);
   rpc updateUser(updateUserReq) returns(updateUserRsp);
   rpc deleteUser(deleteUserReq) returns(deleteUserRsp);
   rpc login(loginReq) returns(loginRsp);
}
